salesforce_sfdx/main/default/objects/Contact/fields/Comentarios__c.field-meta.xml
<CustomField>
    <fullName>Comentarios__c</fullName>
    <label>Comentarios</label>
    <type>TextArea</type>
</CustomField>