salesforce_sfdx/main/default/objects/Contact/fields/Encuesta_satisfaccion__c.field-meta.xml
<CustomField>
    <fullName>Encuesta_satisfaccion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcar para ser incluido en encuesta anual</inlineHelpText>
    <label>Contacto seleccionado para encuesta</label>
    <type>Checkbox</type>
</CustomField>