salesforce_sfdx/main/default/objects/Contact/fields/Id_OrgMexico__c.field-meta.xml
<CustomField>
    <fullName>Id_OrgMexico__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Guarda el Id original de Salesforce de la Org México</description>
    <externalId>true</externalId>
    <label>Id Org Mexico</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>