salesforce_sfdx/main/default/objects/Contact/fields/Mail_Asistente__c.field-meta.xml
<CustomField>
    <fullName>Mail_Asistente__c</fullName>
    <label>Correo Asistente</label>
    <type>Email</type>
</CustomField>