salesforce_sfdx/main/default/objects/Contact/fields/Nombre_Asistente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Asistente__c</fullName>
    <label>Nombre Asistente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>