salesforce_sfdx/main/default/objects/Contact/fields/OSFMX_conmutador_phone__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_conmutador_phone__c</fullName>
    <label>Teléfono Conmutador</label>
    <type>Phone</type>
</CustomField>