salesforce_sfdx/main/default/objects/Contact/fields/OSFMX_ContactStatus__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContactStatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activo</fullName>
            </value>
            <value>
                <fullName>Inactivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>