salesforce_sfdx/main/default/objects/Contact/fields/OSFMX_Extension__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Extension__c</fullName>
    <label>Extensión</label>
    <type>Phone</type>
</CustomField>