salesforce_sfdx/main/default/objects/Contact/fields/OSFMX_Rol__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Rol__c</fullName>
    <label>Rol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Comprador</fullName>
            </value>
            <value>
                <fullName>Consejero (influencia)</fullName>
            </value>
            <value>
                <fullName>Consultor</fullName>
            </value>
            <value>
                <fullName>Cuentas por Pagar</fullName>
            </value>
            <value>
                <fullName>Director general</fullName>
            </value>
            <value>
                <fullName>Gestor (administración)</fullName>
            </value>
            <value>
                <fullName>Responsable Comercial</fullName>
            </value>
            <value>
                <fullName>Responsable Técnico</fullName>
            </value>
            <value>
                <fullName>Usuario</fullName>
            </value>
            <value>
                <fullName>Decisor</fullName>
            </value>
            <value>
                <fullName>Influenciador</fullName>
            </value>
            <value>
                <fullName>Gerente</fullName>
                <isActive>false</isActive>
                <label>Gerente</label>
            </value>
            <value>
                <fullName>Ventas</fullName>
                <isActive>false</isActive>
                <label>Ventas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>