salesforce_sfdx/main/default/objects/Contact/fields/OSFPE_fld_nivel_jerarquico__c.field-meta.xml
<CustomField>
    <fullName>OSFPE_fld_nivel_jerarquico__c</fullName>
    <label>Nivel Jerárquico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>N-1</fullName>
            </value>
            <value>
                <fullName>N-2</fullName>
            </value>
            <value>
                <fullName>N-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>