salesforce_sfdx/main/default/objects/Contact/fields/Tipo_de_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Encuesta__c</fullName>
    <label>Tipo de encuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engie Services</fullName>
                <default>true</default>
                <label>Engie Services</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>