salesforce_sfdx/main/default/objects/Contact/recordTypes/Contacto_Chile.recordType-meta.xml
<RecordType>
    <fullName>Contacto_Chile</fullName>
    <active>true</active>
    <label>Contacto Chile</label>
</RecordType>