salesforce_sfdx/main/default/objects/Contact/recordTypes/Contactos_Colombia.recordType-meta.xml
<RecordType>
    <fullName>Contactos_Colombia</fullName>
    <active>true</active>
    <label>Contactos Colombia</label>
</RecordType>