salesforce_sfdx/main/default/objects/Contact/recordTypes/OSFPE_rt_Contacto.recordType-meta.xml
<RecordType>
    <fullName>OSFPE_rt_Contacto</fullName>
    <active>true</active>
    <label>Contacto Perú</label>
</RecordType>