salesforce_sfdx/main/default/objects/Contact/validationRules/Nombre_validado.validationRule-meta.xml
<ValidationRule>
    <fullName>Nombre_validado</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
($Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
 $Profile.Name &lt;&gt; &quot;System Administrator&quot;,
RecordType.Name = &quot;MobilePhoneContact&quot;,
    ISBLANK(FirstName )
)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>Debes ingresar el nombre del contacto.</errorMessage>
</ValidationRule>