salesforce_sfdx/main/default/objects/Contact/validationRules/OSFMX_AddresRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFMX_AddresRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	OR(ISBLANK(MailingStreet),
	OR(ISBLANK(MailingPostalCode),
	OR(ISBLANK(MailingCity),
	OR(ISBLANK(MailingState),
	OR(ISBLANK(MailingCountry)))))),
RecordType.Name = &quot;MobilePhoneContact&quot;,
$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
$Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>Tienes que registrar la dirección completa.</errorMessage>
</ValidationRule>