salesforce_sfdx/main/default/objects/Contact/validationRules/OSFMX_Phone_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>OSFMX_Phone_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISBLANK(  MobilePhone ),
    ISBLANK( Phone ), 
    ISBLANK(  OSFMX_conmutador_phone__c ),
    RecordType.Name = &quot;MobilePhoneContact&quot;,
    $Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;,
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
   )</errorConditionFormula>
    <errorMessage>Debes capturar por lo menos un teléfono.</errorMessage>
</ValidationRule>