salesforce_sfdx/main/default/objects/Contact/validationRules/Registro_telefono_Chile.validationRule-meta.xml
<ValidationRule>
    <fullName>Registro_telefono_Chile</fullName>
    <active>true</active>
    <description>Exige el registro de al menos un número de teléfono</description>
    <errorConditionFormula>RecordType.DeveloperName  = &quot;Contacto_Chile&quot;  &amp;&amp;  CreatedBy.Profile.Name &lt;&gt; &apos;Administrador del sistema&apos; &amp;&amp;
ISBLANK( Phone )  &amp;&amp;   ISBLANK( MobilePhone )</errorConditionFormula>
    <errorMessage>Debe registrar al menos un número de teléfono</errorMessage>
</ValidationRule>