salesforce_sfdx/main/default/objects/Contact/validationRules/Registro_telefono_Colombia.validationRule-meta.xml
<ValidationRule>
    <fullName>Registro_telefono_Colombia</fullName>
    <active>true</active>
    <description>Exige el registro de al menos un número de teléfono</description>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot;&amp;&amp;
(RecordType.DeveloperName=&apos;Contactos_Colombia&apos;) 
&amp;&amp;ISBLANK( Phone )  &amp;&amp;  ISBLANK( MobilePhone )</errorConditionFormula>
    <errorMessage>Debe registrar al menos un número de teléfono</errorMessage>
</ValidationRule>